Hide sidebar content to eliminate expand-to-collapse loading bug

--- a/source/assets/stylesheets/_sidebar.scss
+++ b/source/assets/stylesheets/_sidebar.scss
@@ -28,6 +28,7 @@
   section {
     background-color: #EFEFEF;
     border-top: 1px solid #cccccc;
+
     position: relative;
 
     .title {
@@ -46,8 +47,9 @@
     }
 
     .content {
-      padding: 0.9375em;
       background-color: white;
+      display: none;
+      padding: 0.9375em;
       ul.side-nav {
         padding: 0;
         li {
